<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/action_settings">
    <CheckBoxPreference android:title="@string/auto_update_switch_title" 
        android:key="@string/auto_update_switch_key" 
        android:summaryOff="@string/auto_update_switch_summary_off" 
        android:summaryOn="@string/auto_update_switch_summary_on"/>
    <ListPreference android:entries="@array/auto_update_frequency_entry" 
        android:entryValues="@array/auto_update_frequency_value" 
        android:dialogTitle="@string/auto_update_frequency_title" 
        android:negativeButtonText="@string/cancel" 
        android:key="@string/auto_update_frequency_key" 
        android:title="@string/auto_update_frequency_title" 
        android:defaultValue="@string/auto_update_frequency_default_value" 
        android:summary="@string/auto_update_frequency_summary"/>
    

</PreferenceScreen>